# tetorica-retro-player

./: Cargo.toml  Memo.md  README.ja.md  README.md  RELEASE_MEMO.md  deploy_mac.sh  index.html  package-lock.json  package.json  tsconfig.extension.json  vite.config.ts  vite.web.config.ts  web.html
docs/: audio-pipeline.md  index.html  index.ja.html  manual.en.html  manual.en.md  manual.html  manual.md  next-session-loop-music.md  privacy-policy.html  virtual-display-macos.md
examples/: package-lock.json  package.json
extension/: background.js  manifest.json  popup.css  (+6 more)
src-mdrop-core/: Cargo.toml
src-mdrop-core/src/: bonjour.rs  hello.rs  http.rs  http_api.rs  http_file.rs  http_stream.rs  http_utils.rs  lib.rs
src-mdrop-core/web-placeholder/: manifest.webmanifest  sw-template.js  sw.js  web.html
src-mdrop-core/web-placeholder/assets/: PdfPreview--VZh91sd.js  PdfPreview-0TLaEsVn.js  PdfPreview-1LzAFR8M.js  PdfPreview-4ok2f3zc.js  PdfPreview-6jAH4FIB.js  PdfPreview-7UMJjQ5F.js  PdfPreview-8FnI_H3L.js  PdfPreview-B1J-fK0M.js  PdfPreview-B1d67jvV.js  PdfPreview-B2_MGKu_.js  PdfPreview-B6RBLbS9.js  PdfPreview-B6Zff9X7.js  PdfPreview-B93EcTLF.js  PdfPreview-BBCu8B8p.js  PdfPreview-BC8SQoHK.js  PdfPreview-BHEHHxv0.js  PdfPreview-BLBWfKQy.js  PdfPreview-BONMmCu6.js  PdfPreview-BVICMh4v.js  PdfPreview-BXAtqaif.js  PdfPreview-BZhqqnS6.js  PdfPreview-Baqep81o.js  PdfPreview-BbfK1z0o.js  PdfPreview-Brb8NSnq.js  PdfPreview-Buj0QGPw.js  PdfPreview-BxmewiGG.js  PdfPreview-ByZxp_4r.js  PdfPreview-C1rLgOZv.js  PdfPreview-C3VyTVRP.js  PdfPreview-C88wyIwm.js  PdfPreview-C8LdKJHO.js  PdfPreview-CBjV_-WW.js  PdfPreview-CFKC0Vqi.js  PdfPreview-CKB8LJ93.js  PdfPreview-CU-Wv5x3.js  PdfPreview-CU7szh27.js  PdfPreview-Ca0n_5uB.js  PdfPreview-CdeigvEy.js  PdfPreview-Cdk0ZZBp.js  PdfPreview-CfEJrxRS.js  (+735 more)
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/binaries/: .gitignore
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ffmpeg.rs  lib.rs  main.rs
(+2277 files in other folders)
