[package]
name = "tetorica-mdrop-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "tetorica_mdrop_core"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.8.9"
mdns-sd = "0.19.1"
local-ip-address = "0.6.12"
chrono = "0.4.44"
tower-http = { version = "0.6.8", features = ["cors", "fs"] }
if-addrs = "0.15.0"
tokio-util = { version = "0.7.18", features = ["io"] }
base64 = "0.22.1"
rcgen = "0.14.7"
axum-server = { version="0.8.0", features = ["tls-rustls"] }
percent-encoding = "2.3.2"
rust-embed = "8.11.0"
mime_guess = "2.0.5"
zip = "8.6.0"
uuid = { version = "1.23.1", features = ["v4"] }


[features]
default = []
dev_web = []
