[package]
name = "tetorica-retro-player"
version = "0.33.7"
description = "retro player"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tetorica_retro_player_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
ffmpeg-sidecar = ["dep:tauri-plugin-ffmpeg"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sharesheet = "0.0.1"
tauri-plugin-sharekit = "0.3.1"
tauri-plugin-ffmpeg = { version = "0.1", optional = true }
tetorica-mdrop-core = { path = "../src-mdrop-core" }
tauri-plugin-dialog = "2"
tauri-plugin-deep-link = "2"
uuid = { version = "1", features = ["v4"] }

